@@ -27,15 +27,7 @@ if (!isset($_SESSION['email'])) {
     echo json_encode(["message" => "Unauthorized"]);
     exit();
 }
-function getDropdownData($conn, $table, $filter = null) {
-    $sql = "SELECT * FROM " . $table;
-    if ($filter) {
-        $sql .= " WHERE kommune = ?";
-    }
-    $stmt = $conn->prepare($sql);
-    if ($filter) {
-        $stmt->bind_param("i", $filter);
-    }
+function getDropdownData($stmt) {
     $stmt->execute();
     $result = $stmt->get_result();
     $items = [];
@@ -45,13 +37,25 @@ function getDropdownData($conn, $table, $filter = null) {
     return $items;
 }
 
-
-// Check if a specific filter is required (for 'steder' based on 'kommune')
-$filter = isset($_GET['kommune']) ? (int)$_GET['kommune'] : null;
 $table = isset($_GET['table']) ? $_GET['table'] : '';
 
+// Check if a specific filter is required (for 'steder' based on 'kommune')
+if (isset($_GET['filter']) && $_GET['filter'] == "kommune") {
+    $filter = (int)$_GET['filter_string'];
+    $sql = "SELECT * FROM " . $table . " WHERE kommune = ?";
+    $stmt = $conn->prepare($sql);
+    $stmt->bind_param("i", $filter);
+} elseif (isset($_GET['filter']) && $_GET['filter'] == "user_role"){
+    $sql = "SELECT u.* FROM users u LEFT JOIN user_roles ur on ur.user_id = u.id WHERE ur.role = ?";
+    $stmt = $conn->prepare($sql);
+    $stmt->bind_param("s", $_GET['filter_string']);
+} else {
+    $sql = "SELECT * FROM " . $table;
+    $stmt = $conn->prepare($sql);
+}
+
 // Collect data
-$data = getDropdownData($conn, $table, $filter);
+$data = getDropdownData($stmt);
 
 // Packing data and returning as JSON
 header('Content-Type: application/json');
