@@ -17,80 +17,48 @@
  *
  */
 
-
-
 require 'config.php';
 require 'functions.php';
 
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
     $email = $_POST['email'];
-    createMagicLink($email);
-    echo "<p>En innloggingslenke ble sendt til epostadressen din. Husk at det bare fungerer med epostadressen du er registrert med hos Norges sopp- og nyttevekstforening.</p>";
-    echo "<p>Det kan ta noen minutter før eposten kommer. Når eposten kommer kan du klikke på lenken eller lime inn adressen i nettleseren din.</p>";
-    echo "<p>Dersom du ikke får noen epost kan det hjelpe å legge til vaktliste@tsnf.noteng.no som klarert avsender/kontakt</p>";
+    $user_id = getUserIdByEmail($email); // En ny funksjon som henter user_id ved hjelp av email
+    if ($user_id) {
+        createMagicLink($user_id);
+        echo "<p>En innloggingslenke ble sendt til epostadressen din. Husk at det bare fungerer med epostadressen du er registrert med hos Norges sopp- og nyttevekstforening.</p>";
+        echo "<p>Det kan ta noen minutter før eposten kommer. Når eposten kommer kan du klikke på lenken eller lime inn adressen i nettleseren din.</p>";
+        echo "<p>Dersom du ikke får noen epost kan det hjelpe å legge til vaktliste@tsnf.noteng.no som klarert avsender/kontakt</p>";
+    } else {
+        echo "<p>E-postadressen er ikke registrert.</p>";
+    }
 } elseif (isset($_GET['token'])) {
     $token = $_GET['token'];
-    $email = validateMagicLink($token);
+    $user_id = validateMagicLink($token);
 
-    if ($email) {
-        // Sjekk hvilken tabell brukeren tilhører
-        $user_type = "";
-        $user_id = "";
-        $user_name = "";
-
-        // Sjekk admins
-        $sql = "SELECT id, navn FROM admins WHERE epost = ?";
+    if ($user_id) {
+        // Hent brukerdata fra users-tabellen
+        $sql = "SELECT u.id, u.navn, ur.role, u.epost FROM users u JOIN user_roles ur ON u.id = ur.user_id WHERE u.id = ?";
         $stmt = $conn->prepare($sql);
-        $stmt->bind_param("s", $email);
+        $stmt->bind_param("i", $user_id);
         $stmt->execute();
         $result = $stmt->get_result();
         if ($result->num_rows > 0) {
             $user = $result->fetch_assoc();
-            $user_type = "admin";
             $user_id = $user['id'];
             $user_name = $user['navn'];
-        }
+            $user_role = $user['role'];
+            $email = $user['epost'];
 
-        // Sjekk ssk
-        if (empty($user_type)) {
-            $sql = "SELECT id, navn FROM ssk WHERE epost = ?";
-            $stmt = $conn->prepare($sql);
-            $stmt->bind_param("s", $email);
-            $stmt->execute();
-            $result = $stmt->get_result();
-            if ($result->num_rows > 0) {
-                $user = $result->fetch_assoc();
-                $user_type = "ssk";
-                $user_id = $user['id'];
-                $user_name = $user['navn'];
-            }
-        }
-
-        // Sjekk ridderhatt
-        if (empty($user_type)) {
-            $sql = "SELECT id, navn FROM ridderhatt WHERE epost = ?";
-            $stmt = $conn->prepare($sql);
-            $stmt->bind_param("s", $email);
-            $stmt->execute();
-            $result = $stmt->get_result();
-            if ($result->num_rows > 0) {
-                $user = $result->fetch_assoc();
-                $user_type = "ridderhatt";
-                $user_id = $user['id'];
-                $user_name = $user['navn'];
-            }
-        }
-
-        if ($user_type) {
             // Lagre token i en cookie
             $expiry = strtotime('+30 days'); // Token utløper etter 30 dager
             setcookie('login_token', $token, $expiry, '/', '', false, true);
 
             // Start session and set session variables
+            session_start();
             $_SESSION['email'] = $email;
-            $_SESSION['user_type'] = $user_type;
             $_SESSION['user_id'] = $user_id;
             $_SESSION['user_name'] = $user_name;
+            $_SESSION['user_role'] = $user_role;
             header("Location: dashboard.php");
             exit();
         } else {
